objects/SM_Answer__c.object
<CustomObject>
    <description>Survey Monkey Answer object for Survey Answer details from SurveryMonkey API</description>
    <fields>
        <fullName>Answer_Id__c</fullName>
        <externalId>true</externalId>
        <label>Answer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SM_Question__c</fullName>
        <label>SM Question</label>
        <referenceTo>SM_Question__c</referenceTo>
        <relationshipLabel>SM Answers</relationshipLabel>
        <relationshipName>SM_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SM Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SM Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SM Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>